--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "dependencies": {
     "ejs": "^2.3.3",
     "express": "^4.13.3",
-    "less-middleware": "^2.0.1"
+    "less-middleware": "^2.0.1",
+    "loggly": "^1.0.8",
+    "morgan": "^1.6.1",
+    "winston": "^1.0.1",
+    "winston-loggly": "^1.1.0"
   }
 }
