--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "body-parser": "^1.13.3",
     "ejs": "^2.3.3",
     "express": "^4.13.3",
+    "imgur": "^0.1.6",
     "less-middleware": "^2.0.1",
     "loggly": "^1.0.8",
     "morgan": "^1.6.1",
-    "winston": "^1.0.1",
-    "winston-loggly": "^1.1.0"
+    "multer": "^1.0.1",
+    "node-imgur": "^0.1.2"
   }
 }
