--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
   },
   "homepage": "https://github.com/ccates23/expressbasics#readme",
   "dependencies": {
+    "bcrypt": "^0.8.5",
     "body-parser": "^1.13.3",
+    "cookie-session": "^1.2.0",
     "ejs": "^2.3.3",
     "express": "^4.13.3",
+    "express-session": "^1.11.3",
     "imgur": "^0.1.6",
     "less-middleware": "^2.0.1",
     "loggly": "^1.0.8",
+    "moment": "^2.10.6",
+    "mongodb": "^2.0.40",
     "morgan": "^1.6.1",
     "multer": "^1.0.1",
     "node-imgur": "^0.1.2"
